--- a/trunk/edu.unicen.ucrefactoring/build.properties
+++ b/trunk/edu.unicen.ucrefactoring/build.properties
@@ -8,7 +8,9 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               lib/jaligner.jar,\
+               lib/neobio.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
