--- a/trunk/edu.unicen.ucrefactoring/build.properties
+++ b/trunk/edu.unicen.ucrefactoring/build.properties
@@ -10,7 +10,8 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                lib/jaligner.jar,\
-               lib/neobio.jar
+               lib/neobio.jar,\
+               lib/jaws-bin.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
