--- a/edu.unicen.ucrefactoring/.classpath
+++ b/edu.unicen.ucrefactoring/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jaligner.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/neobio.jar"/>
 	<classpathentry kind="lib" path="swt-grouplayout.jar" sourcepath="swt-grouplayout.zip"/>
+	<classpathentry kind="lib" path="swing2swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
